<resources>
    <string name="app_name">PhishApp</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="email_login">Email</string>
    <string name="password_login">Password</string>
    <string name="retype_password">Retype Password</string>
    <string name="sign_in">Sign In</string>
    <string name="register">Register</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
</resources>
